crates/wdl-analysis/tests/validation/requirements-unsupported/source.wdl
## This is a test of using a requirements section from WDL 1.1

version 1.1

task test {
    requirements {
    }

    command <<<>>>
}
